[workspace]
members = ["content", "shared", "test_shared","fly", "webapp", "planning", "blog"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
openai_dive = { version="1.3", default-features = false, features = ["rustls-tls"] }
reqwest = { version="0.12", default-features = false, features = ["blocking","rustls-tls"] }
log = "0.4"
url = { version = "2.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }
chrono = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
flate2 = "1.1.8"


