[package]
name = "content"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.38", features = ["serialize"] }
xmlserde = "0.12"
xmlserde_derives = "0.12"
env_logger = "0.11"
bytes = "1.11"
tiktoken-rs = "0.9"
async-process = "2.5"
regex = "1.12"
subtp = "0.2"
reqwest = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
openai_dive = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
