[package]
name = "shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { workspace = true }
openai_dive = { workspace = true }
log = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
test_shared = { path = "../test_shared" }