[package]
name = "content"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.29", features = ["serialize"] }
xmlserde = "0.5.5"
xmlserde_derives = "0.5.5"
env_logger = "0.10.1"
reqwest = "0.11.24"
bytes = "1.5.0"
async-process = "2.1.0"
regex = "1.10.3"
subtp = "0.2.0"
futures = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
