[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
openai_dive = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
