[package]
name = "shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_dive = { workspace = true }
sqlx = { workspace = true }
pgvector = { workspace = true }
log = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
