[package]
name = "fosdem2024"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
tracing = "0.1.40"
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
shared = { path = "../shared" }
webapp = { path = "../webapp" }
