[package]
name = "snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
insta = { version = "1.36", features = ["yaml"] }
