[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-valid = "0.13"
validator = { version = "0.16", features = ["derive"] }
askama = "0.12"
unicode-segmentation = "1.10"
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }
content = { path = "../content" }
